# unixtools

./: Cargo.toml  README.md
src/cat/: main.rs
src/cat1/: main.rs
src/cat2/: main.rs
src/cat3/: main.rs
src/echo/: main.rs
src/echo1/: main.rs
src/echo2/: main.rs
src/echo3/: main.rs
